Implement roles API, display user type and determine if it's company or individual

--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -1475,13 +1475,13 @@
                         <outlet property="enroledTestingImageView" destination="kuQ-ec-fql" id="pna-Vb-UB1"/>
                         <outlet property="headerHeightConstraint" destination="Fhh-FM-aIX" id="vxr-hv-SHV"/>
                         <outlet property="hidableDownView" destination="jpt-Ua-Mrz" id="gbO-ko-GDi"/>
-                        <outlet property="kycStatusLabel" destination="YqW-LY-nCJ" id="UKJ-0e-LCq"/>
                         <outlet property="loadingView" destination="smJ-7h-ibg" id="go5-Ob-RnE"/>
                         <outlet property="tableView" destination="vDC-kx-BOD" id="Rkp-Co-ef7"/>
                         <outlet property="titleTopConstraint" destination="WLr-En-EOf" id="b2x-8V-qHq"/>
                         <outlet property="topConstraintOutlet" destination="RcQ-CM-Q1z" id="oiq-s7-t0N"/>
                         <outlet property="topRootView" destination="1Ff-7j-qth" id="iuc-CR-UvQ"/>
                         <outlet property="userImageView" destination="KkL-6h-ATe" id="xSS-in-aM8"/>
+                        <outlet property="userRoleLabel" destination="YqW-LY-nCJ" id="VT3-tQ-yFF"/>
                         <outlet property="usernameLabel" destination="7cd-o2-HyC" id="fUo-fS-Ia8"/>
                         <outlet property="usernameTopLabel" destination="gBl-vJ-0cj" id="HRp-GB-Hja"/>
                         <segue destination="f4i-TE-mFB" kind="show" identifier="WalletsListID" id="TUj-iw-bz7"/>
@@ -1533,7 +1533,7 @@
         <image name="RightDisclosure" width="8.6666669845581055" height="16"/>
         <image name="RightDisclosureSmall" width="5.6666665077209473" height="10.333333015441895"/>
         <image name="Wallet" width="25.666666030883789" height="26"/>
-        <image name="locked" width="8.3333330154418945" height="10.666666984558105"/>
+        <image name="locked" width="12.333333015441895" height="16"/>
         <image name="providerNotSubmitted" width="36" height="36"/>
         <image name="settingsProfile" width="30.333333969116211" height="30.333333969116211"/>
     </resources>
