Optimise the wallet manager requests

--- a/IPSX/Flows/Wallets/Storyboard/Base.lproj/WalletAdd.storyboard
+++ b/IPSX/Flows/Wallets/Storyboard/Base.lproj/WalletAdd.storyboard
@@ -995,7 +995,7 @@
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oBO-bb-TdT" userLabel="Separator">
                                 <rect key="frame" x="0.0" y="343.5" width="375" height="0.5"/>
-                                <color key="backgroundColor" red="0.67450980392156867" green="0.67450980392156867" blue="0.67450980392156867" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.67450980392156867" green="0.67450980392156867" blue="0.67450980392156867" alpha="0.5" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="0.5" id="QXv-bb-E9D"/>
                                 </constraints>
@@ -1008,7 +1008,7 @@
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gAX-UH-faK" userLabel="Separator">
                                 <rect key="frame" x="0.0" y="392" width="375" height="0.5"/>
-                                <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.5" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="0.5" id="Dmu-wM-Xhv"/>
                                 </constraints>
@@ -1118,6 +1118,6 @@
         <image name="walletLarge" width="51" height="51.5"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="kox-f1-XBp"/>
+        <segue reference="VIp-L5-DOc"/>
     </inferredMetricsTieBreakers>
 </document>
