--- a/IPSX/Flows/Wallets/Storyboard/Base.lproj/WalletAdd.storyboard
+++ b/IPSX/Flows/Wallets/Storyboard/Base.lproj/WalletAdd.storyboard
@@ -838,6 +838,7 @@
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="loadingView" destination="Z9Q-Q6-0gT" id="eVk-nJ-JX0"/>
+                        <outlet property="noWalletHelpLabel" destination="R8g-uf-5VR" id="CB9-61-Er7"/>
                         <outlet property="separatorView" destination="etY-zZ-efQ" id="jq5-We-8TI"/>
                         <outlet property="tableTopSeparator" destination="Qby-RM-c0l" id="puc-A6-TkJ"/>
                         <outlet property="tableView" destination="V30-Dc-18s" id="Edg-rC-jtY"/>
@@ -1118,6 +1119,6 @@
         <image name="walletLarge" width="51" height="51.5"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="VIp-L5-DOc"/>
+        <segue reference="kox-f1-XBp"/>
     </inferredMetricsTieBreakers>
 </document>
