--- a/IPSX/Flows/Marketplace/Market.storyboard
+++ b/IPSX/Flows/Marketplace/Market.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wvt-Qd-Tf6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -135,7 +135,7 @@
         <!--Market Item Controller-->
         <scene sceneID="Mcq-DL-sxl">
             <objects>
-                <viewController hidesBottomBarWhenPushed="YES" id="sBJ-Zc-YxA" customClass="MarketItemController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MarketItemID" hidesBottomBarWhenPushed="YES" id="sBJ-Zc-YxA" customClass="MarketItemController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jNT-25-Xbm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -188,7 +188,7 @@
                                             <color key="titleColor" red="0.16862745100000001" green="0.51372549020000002" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <segue destination="qY5-m2-NcS" kind="unwind" unwindAction="unwindToTabBarWithSegue:" id="mGx-nE-Nap"/>
+                                            <action selector="backAction:" destination="sBJ-Zc-YxA" eventType="touchUpInside" id="wpo-3N-Yig"/>
                                         </connections>
                                     </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RO32" translatesAutoresizingMaskIntoConstraints="NO" id="N49-i0-cE3">
@@ -571,28 +571,8 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1M2-xO-Bsz" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="qY5-m2-NcS" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="6029.6000000000004" y="682.3088455772114"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="mWl-5E-qSS">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="wvt-Qd-Tf6" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <nil key="simulatedTopBarMetrics"/>
-                    <nil key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="LR8-oU-bzm">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="sBJ-Zc-YxA" kind="relationship" relationship="rootViewController" id="Zyy-DD-zNC"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gTs-Hn-l3X" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="5240.8000000000002" y="684.10794602698661"/>
         </scene>
     </scenes>
     <resources>
