--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -15,11 +15,11 @@
             <objects>
                 <viewController title="Marketplace" id="6jc-WL-DqT" customClass="MarketController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="T69-ub-Uaa">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="123" estimatedRowHeight="-1" sectionHeaderHeight="38" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="s7w-JR-Nif">
-                                <rect key="frame" x="15" y="158.66666666666669" width="345" height="570.33333333333326"/>
+                                <rect key="frame" x="15" y="158.66666666666669" width="345" height="619.33333333333326"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MarketCellID" id="Ymp-gl-Ske" customClass="MarketCell" customModule="IPSX" customModuleProvider="target">
@@ -305,13 +305,13 @@
                                 </constraints>
                             </view>
                             <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Xs-5a-Py6" userLabel="Country Overlay View">
-                                <rect key="frame" x="0.0" y="-56" width="375" height="885"/>
+                                <rect key="frame" x="0.0" y="-56" width="375" height="934"/>
                                 <subviews>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dQL-hX-DdX" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
-                                        <rect key="frame" x="15" y="307" width="345" height="271"/>
+                                        <rect key="frame" x="15" y="331.66666666666669" width="345" height="271.00000000000006"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QnE-Vj-pou">
-                                                <rect key="frame" x="301" y="1.6666666666666572" width="44" height="44"/>
+                                                <rect key="frame" x="301" y="1.3333333333333144" width="44" height="44"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="44" id="QzR-dT-5oj"/>
                                                     <constraint firstAttribute="height" constant="44" id="cCs-9y-SKf"/>
@@ -322,14 +322,14 @@
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gav-ze-Cf0" userLabel="Separator">
-                                                <rect key="frame" x="0.0" y="49" width="345" height="0.6666666666666643"/>
+                                                <rect key="frame" x="0.0" y="49" width="345" height="0.3333333333333357"/>
                                                 <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.30391725349999998" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="0.5" id="IWu-YT-CAX"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lfH-C4-kTW">
-                                                <rect key="frame" x="0.0" y="49.666666666666686" width="345" height="164"/>
+                                                <rect key="frame" x="0.0" y="49.333333333333314" width="345" height="164"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please select your country before proceeding to the offer page" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I1T-15-Dpv">
                                                         <rect key="frame" x="20" y="27.000000000000004" width="305" height="38.333333333333343"/>
@@ -408,7 +408,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C9g-y9-Onc" userLabel="Separator">
-                                                <rect key="frame" x="0.0" y="213.66666666666669" width="345" height="0.33333333333334281"/>
+                                                <rect key="frame" x="0.0" y="213.33333333333331" width="345" height="0.66666666666665719"/>
                                                 <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.30276188380000002" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="0.5" id="QxQ-P0-8y5"/>
@@ -465,7 +465,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9wh-bB-9UA" customClass="CustomLoadingView" customModule="IPSX" customModuleProvider="target">
-                                <rect key="frame" x="165.66666666666666" y="364.66666666666669" width="44" height="44"/>
+                                <rect key="frame" x="165.66666666666666" y="389" width="44" height="44"/>
                                 <color key="backgroundColor" red="0.81176470590000005" green="0.054901960780000002" blue="0.054901960780000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="44" id="S7p-Cv-Egs"/>
@@ -506,7 +506,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="gIv-Tu-HaQ"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Marketplace" image="Marketplace" id="B73-W5-OlS"/>
+                    <navigationItem key="navigationItem" id="1lk-u5-yWs"/>
                     <connections>
                         <outlet property="countryOverlayView" destination="2Xs-5a-Py6" id="gfW-UH-P3j"/>
                         <outlet property="countryRComponent" destination="wMJ-Xf-01h" id="FOh-8I-ddh"/>
@@ -519,20 +519,20 @@
                         <outlet property="topConstraintOutlet" destination="WPI-iS-ivX" id="FJR-Vn-58f"/>
                         <segue destination="adJ-7o-RXS" kind="presentation" identifier="CountrySearchSegueID" id="2RJ-YM-lk1"/>
                         <segue destination="re9-YY-vLi" kind="presentation" identifier="MarketTutorialSegueID" id="EHc-PY-kev"/>
-                        <segue destination="ycU-Dh-oI3" kind="presentation" identifier="MarketItemSegueID" id="8gw-Ts-PfU"/>
+                        <segue destination="ycU-Dh-oI3" kind="show" identifier="MarketItemSegueID" id="8gw-Ts-PfU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YAj-hP-pBT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-698.39999999999998" y="815.76354679802955"/>
+            <point key="canvasLocation" x="122" y="815"/>
         </scene>
-        <!--Market-->
+        <!--MarketItemID-->
         <scene sceneID="SIG-G4-IxO">
             <objects>
-                <viewControllerPlaceholder storyboardName="Market" id="ycU-Dh-oI3" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="Market" referencedIdentifier="MarketItemID" id="ycU-Dh-oI3" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bfk-jU-FP3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-439" y="1244"/>
+            <point key="canvasLocation" x="268" y="1249"/>
         </scene>
         <!--MarketTutorialID-->
         <scene sceneID="Noi-tx-QFR">
@@ -540,7 +540,7 @@
                 <viewControllerPlaceholder storyboardName="Market" referencedIdentifier="MarketTutorialID" id="re9-YY-vLi" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eAM-Nt-nci" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-134" y="1244"/>
+            <point key="canvasLocation" x="499" y="1249"/>
         </scene>
         <!--Search-->
         <scene sceneID="s5E-0c-hhg">
@@ -566,7 +566,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Q1-ed-dDn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-742" y="1600"/>
+            <point key="canvasLocation" x="-316" y="1592"/>
         </scene>
         <!--TokenRequest-->
         <scene sceneID="BAM-D0-gpb">
@@ -1143,7 +1143,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="4A6-HS-yFF" kind="relationship" relationship="viewControllers" id="Cef-Bn-cZz"/>
-                        <segue destination="6jc-WL-DqT" kind="relationship" relationship="viewControllers" id="lZb-l8-eDA"/>
+                        <segue destination="I1j-aP-CCQ" kind="relationship" relationship="viewControllers" id="lZb-l8-eDA"/>
                         <segue destination="f0C-Rr-AGY" kind="relationship" relationship="viewControllers" id="cu0-ty-GJw"/>
                         <segue destination="RbI-qU-2hi" kind="relationship" relationship="viewControllers" id="Roy-su-mpx"/>
                         <segue destination="grr-34-nBj" kind="presentation" identifier="showLandingSegueID" id="TtS-cb-UUJ"/>
@@ -1237,7 +1237,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tve-8X-fak" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="168.80000000000001" y="815.44227886056979"/>
+            <point key="canvasLocation" x="1111.2" y="815.02463054187194"/>
         </scene>
         <!--Settings-->
         <scene sceneID="fF7-8T-J97">
@@ -1245,7 +1245,7 @@
                 <viewControllerPlaceholder storyboardName="Settings" id="DBk-xF-uIQ" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tp1-uR-5Yr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2606" y="799"/>
+            <point key="canvasLocation" x="3548" y="798.76847290640399"/>
         </scene>
         <!--Profile-->
         <scene sceneID="iMw-S4-9zh">
@@ -1255,7 +1255,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hHB-S1-cvh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2592" y="850"/>
+            <point key="canvasLocation" x="3534.4000000000001" y="849.7536945812808"/>
         </scene>
         <!--LegalDetails-->
         <scene sceneID="JLH-ht-p9g">
@@ -1279,7 +1279,7 @@
                 <viewControllerPlaceholder storyboardName="WalletAdd" id="f4i-TE-mFB" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c8R-Sg-vJf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2626" y="1078"/>
+            <point key="canvasLocation" x="3568" y="1077.3399014778327"/>
         </scene>
         <!--EnrolTesting-->
         <scene sceneID="5Tl-oK-6Ba">
@@ -1287,7 +1287,7 @@
                 <viewControllerPlaceholder storyboardName="EnrolTesting" id="sXt-2s-6Qg" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2ne-4F-IQ9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2621" y="920"/>
+            <point key="canvasLocation" x="3563.1999999999998" y="919.95073891625623"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="jmj-Iy-rg5">
@@ -1304,7 +1304,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZjJ-ay-cQU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3282" y="813"/>
+            <point key="canvasLocation" x="4223.1999999999998" y="812.807881773399"/>
         </scene>
         <!--EnrolTestSummaryControllerID-->
         <scene sceneID="4s8-E1-atJ">
@@ -1312,7 +1312,7 @@
                 <viewControllerPlaceholder storyboardName="EnrolTesting" referencedIdentifier="EnrolTestSummaryControllerID" id="5il-XE-IfM" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="85b-vn-z6G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2710" y="951"/>
+            <point key="canvasLocation" x="3651.1999999999998" y="950.98522167487693"/>
         </scene>
         <!--EnrolStakeSummaryControllerID-->
         <scene sceneID="VJJ-K1-m3I">
@@ -1322,7 +1322,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UfD-ys-492" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3970" y="812"/>
+            <point key="canvasLocation" x="4911.1999999999998" y="811.33004926108379"/>
         </scene>
         <!--EnrolStaking-->
         <scene sceneID="r9K-gN-8el">
@@ -1330,7 +1330,7 @@
                 <viewControllerPlaceholder storyboardName="EnrolStaking" id="t5L-Xq-3ez" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GFP-Dt-GOh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2624" y="1002"/>
+            <point key="canvasLocation" x="3566.4000000000001" y="1001.9704433497537"/>
         </scene>
         <!--Profile-->
         <scene sceneID="e5X-ZR-dkq">
@@ -1349,7 +1349,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="skb-Re-IRv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1093.5999999999999" y="813.54679802955673"/>
+            <point key="canvasLocation" x="2036" y="813.54679802955673"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="Vye-WP-72c">
@@ -1831,7 +1831,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D2m-gf-wB9" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1980" y="812.74362818590714"/>
+            <point key="canvasLocation" x="2922.4000000000001" y="812.06896551724139"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="C25-eV-rDn">
@@ -1850,6 +1850,26 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k0m-vg-zh1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1116" y="16"/>
+        </scene>
+        <!--Marketplace-->
+        <scene sceneID="pLv-NM-KQv">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="I1j-aP-CCQ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Marketplace" image="Marketplace" id="B73-W5-OlS"/>
+                    <toolbarItems/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SFh-gc-UVW">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="6jc-WL-DqT" kind="relationship" relationship="rootViewController" id="qmK-Rn-gEk"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fcC-bt-zE9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-698.39999999999998" y="815.76354679802955"/>
         </scene>
     </scenes>
     <resources>
@@ -1884,7 +1904,7 @@
         <image name="settingsProfile" width="30.333333969116211" height="30.333333969116211"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="fqj-8c-i0g"/>
+        <segue reference="TtS-cb-UUJ"/>
         <segue reference="2RJ-YM-lk1"/>
     </inferredMetricsTieBreakers>
 </document>
